# GeoGuessr-Trainer

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LICENSE  README.md  main.py  populate.py  pyproject.toml  requirements.txt
.claude/: run_tests.py
.claude/hooks/: ruff_fix.py  run_tests.py
.claude/skills/bundle/: SKILL.md
anki/: anki_connect.py  cards.py  generator.py
core/: analyzer.py  api.py  auth.py  config.py  eco_enrich.py  geo_enrich.py  regions.py  stats.py
db/: mongo.py  update_country.py
db/data/: Bolivia.yaml  FaroeIslands.yaml  HongKong.yaml  Indonesia.yaml  Ireland.yaml  Kyrgyzstan.yaml  Latvia.yaml  Lithuania.yaml  Mexico.yaml  Senegal.yaml  SouthAfrica.yaml  Thailand.yaml  UnitedStates.yaml  Uruguay.yaml
locales/: es.yaml
maps/: country_to_svg.py
skills/integration-test/: SKILL.md
skills/unit-test/: SKILL.md
src/anki/: anki_connect.py  cards.py  generator.py
src/anki/note_types/geoguessr_bollards/: back_template.html  front_template.html  styling.css
src/anki/note_types/geoguessr_license_plates/: back_template.html  front_template.html  styling.css
src/anki/note_types/geoguessr_phone_area_codes/: back_template.html  front_template.html  styling.css
src/anki/note_types/geoguessr_roads/: back_template.html  front_template.html  styling.css
src/anki/note_types/multiple_choice/: back_template.html  front_template.html  styling.css
src/anki/note_types/multiple_map_selection/: back_template.html  front_template.html
src/anki/note_types/single_choice/: back_template.html  front_template.html  styling.css
src/anki/note_types/single_map_selection/: back_template.html  front_template.html  styling.css
src/anki/notes/: base.py  capital_note.py  domain_note.py  driving_side_note.py  flag_note.py  license_plates_note.py  roads_note.py
src/core/: analyzer.py  api.py  app_context.py  auth.py  calculator.py  config.py  eco_enrich.py  geo_enrich.py  printer.py  regions.py  stats.py  sync.py
src/db/: db.py  geo_signals.py  migrate.py  mongo.py  schema.sql  schema.yaml  update_country.py
src/db/data/: Albania.yaml  Andorra.yaml  Argentina.yaml  Australia.yaml  Austria.yaml  Bhutan.yaml  Bolivia.yaml  Botswana.yaml  Brazil.yaml  Chile.yaml  Denmark.yaml  Ecuador.yaml  Eswatini.yaml  FaroeIslands.yaml  Finland.yaml  France.yaml  Ghana.yaml  Greece.yaml  Guatemala.yaml  HongKong.yaml  Iceland.yaml  India.yaml  Indonesia.yaml  Ireland.yaml  Italy.yaml  Japan.yaml  Jordan.yaml  Kyrgyzstan.yaml  Latvia.yaml  Lesotho.yaml  Lithuania.yaml  Luxembourg.yaml  Malaysia.yaml  Mexico.yaml  Netherlands.yaml  NewZealand.yaml  NorthMacedonia.yaml  Norway.yaml  Oman.yaml  Peru.yaml  (+21 more)
src/db/models/: city.py
src/i18n/: __init__.py  lang.py
tests/: test_calculator.py
tests/integration/: startup.py
tests/integration/i18n/: load.py
tests/unit/anki/: add_note.py  construct.py  is_running.py
tests/unit/anki/cards/: build_notes.py
tests/unit/core/app_context/: aclose.py  construct.py  create_geoguessr_client.py  init.py  wiring.py
tests/unit/core/calculator/: _arrow.py  _bootstrap_ci.py  _confusion.py  _dist_to_score.py  _fmt.py  _median.py  _p90.py  _pct.py  _score_label.py  _stddev.py  _zone_stats.py  analyze.py
tests/unit/core/eco_enrich/: lookup.py
tests/unit/core/geo_enrich/: construct.py  enrich.py
tests/unit/core/printer/: print.py
tests/unit/core/sync/: feed.py
tests/unit/db/db/: check_connection.py  fetch_all_rounds.py  fetch_country_geo_signals.py  fetch_saved_challenge_tokens.py  init_pool.py  save_game.py
tests/unit/db/geo_signals/: _build_array.py  _build_section.py  normalize_geo_signals.py
tests/unit/db/models/city/: fetch.py  upsert.py
tests/unit/i18n/: conftest.py  lang_code.py  translate.py
