[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "geoguessr-trainer"
version = "0.1.0"
description = "Analyzes GeoGuessr matches and generates Anki flashcards with geographical signals"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

dependencies = [
    "httpx>=0.27",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
    "playwright>=1.44",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "beautifulsoup4>=4.12",
    "aiofiles>=23.0",
]

[project.optional-dependencies]
terrain = [
    "geopandas>=0.14",
]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "types-requests>=2.32",
    "types-pyyaml>=6.0",
]

[project.scripts]
geoguessr-trainer = "main:main"
geoguessr-populate = "populate:main"

[tool.setuptools.packages.find]
include = ["src*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
mypy_path = "src"
strict = false
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "integration: marks integration tests that require real infrastructure (filesystem, DB, external APIs)",
]
